# x4-station-builder

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
apps/: CMakeLists.txt
apps/editor/: CMakeLists.txt
apps/editor/src/: app_paths.cpp  app_paths.hpp  camera_math.hpp  clay_impl.c  clay_raylib.cpp  clay_raylib.hpp  connbench.cpp  connbench.hpp  gizmoshot.cpp  gizmoshot.hpp  input.cpp  input.hpp  iprofile.cpp  iprofile.hpp  loadbench.cpp  loadbench.hpp  main.cpp  megashot.cpp  megashot.hpp  mesh_cache.cpp  mesh_cache.hpp  mesh_load.cpp  mesh_load.hpp  modifier_keys.hpp  orbit_camera.cpp  orbit_camera.hpp  plan_io.cpp  plan_io.hpp  profile.cpp  profile.hpp  profiling.hpp  raygui_impl.c  raylib_convert.hpp  rdc_api.cpp  rdc_api.hpp  rdc_capture.cpp  rdc_capture.hpp  render.cpp  render.hpp  snaptest.cpp  (+12 more)
apps/pipeline/: CMakeLists.txt
apps/pipeline/src/: main.cpp
cmake/: raylib.cmake  warnings.cmake
libs/: CMakeLists.txt
libs/archive/: CMakeLists.txt
libs/archive/include/x4sb/archive/: archive.hpp
libs/archive/src/: archive.cpp
libs/assetpipe/: CMakeLists.txt
libs/assetpipe/include/x4sb/assetpipe/: catalogbuild.hpp  component.hpp  gltf.hpp  localization.hpp  meshconvert.hpp  moduleindex.hpp  wares.hpp  xmf.hpp
libs/assetpipe/src/: catalogbuild.cpp  component.cpp  gltf.cpp  localization.cpp  meshconvert.cpp  moduleindex.cpp  modulewalk.hpp  strutil.hpp  wares.cpp  xmf.cpp
libs/autolayout/: CMakeLists.txt
libs/autolayout/include/x4sb/autolayout/: autolayout.hpp
libs/autolayout/src/: autolayout.cpp
libs/coords/: CMakeLists.txt
libs/coords/include/x4sb/coords/: coords.hpp
libs/coords/src/: coords.cpp
libs/data/: CMakeLists.txt
libs/data/include/x4sb/data/: catalog.hpp  math.hpp  types.hpp
libs/data/src/: catalog.cpp
libs/document/: CMakeLists.txt
libs/document/include/x4sb/document/: commands.hpp  station.hpp
libs/document/src/: commands.cpp  station.cpp
libs/editorcore/: CMakeLists.txt
libs/editorcore/include/x4sb/editorcore/: display_flip.hpp  editor_state.hpp  gizmo.hpp  mesh_paths.hpp
libs/editorcore/src/: editor_state.cpp  gizmo.cpp  mesh_paths.cpp
libs/planio/: CMakeLists.txt
libs/planio/include/x4sb/planio/: plan.hpp
libs/planio/src/: plan.cpp
libs/platform/: CMakeLists.txt
libs/platform/include/x4sb/platform/: platform.hpp
libs/platform/src/: platform.cpp
libs/snap/: CMakeLists.txt
libs/snap/include/x4sb/snap/: connector_grid.hpp  pick.hpp  snap.hpp
libs/snap/src/: connector_grid.cpp  pick.cpp  snap.cpp
tests/: CMakeLists.txt  archive_test.cpp  assetpipe_test.cpp  autolayout_test.cpp  camera_math_test.cpp  catalog_test.cpp  catalogbuild_test.cpp  clearance_test.cpp  connector_grid_test.cpp  coords_test.cpp  display_flip_test.cpp  display_name_test.cpp  doctest_main.cpp  document_test.cpp  editorcore_test.cpp  gizmo_screen_size_test.cpp  gizmo_test.cpp  localization_test.cpp  math_test.cpp  mesh_paths_test.cpp  meshconvert_test.cpp  moduleindex_test.cpp  pick_test.cpp  plan_test.cpp  platform_test.cpp  snap_test.cpp  wares_test.cpp  xmf_test.cpp
tools/: profile-capture.ps1  rdc-capture.ps1
tools/renderdoc/: README.md
tools/tracy/: README.md
